# vista

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL_GUIDE.md  README.md  TODO.md  build.sh  install-config.sh  setup.sh  theme-update.sh  wallpaper-switcher.sh
config/: vista.conf  vista.conf.example  vista_mac.conf
docs/: Doxyfile.bak  generate_docs.sh  serve-docs.sh
include/: color_source.h  config.h  openrgb.h  renderer.h  shader.h  thumbnails.h  wallpaper.h
include/roulette/: roulette.h  sound.h
shaders/: fragment.glsl  vertex.glsl
src/: color_source.c  config.c  main.c  openrgb.c  renderer.c  shader.c  thumbnails.c  wallpaper.c
src/roulette/: roulette.c  sound.c
tests/: run_tests.sh  test_config.c  test_framework.h
verification/: README.md  verify.sh  verify_core.c  verify_renderer.c
